Added an introduction, some notes on NMF and frequency scales, evaluation, and individual efforts to the paper

--- a/paper/transcription.bib
+++ b/paper/transcription.bib
@@ -156,3 +156,12 @@
   year={1977},
   publisher={JSTOR}
 }
+
+@article{stevens1937scale,
+  title={A scale for the measurement of the psychological magnitude pitch},
+  author={Stevens, Stanley Smith and Volkmann, John and Newman, Edwin B},
+  journal={The Journal of the Acoustical Society of America},
+  volume={8},
+  pages={185},
+  year={1937}
+}
