Added comments about pictures to the paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -23,6 +23,22 @@
 \address[csadd]{Computer Science Department, University of Michigan, Ann Arbor, MI 48109}
 
 
+% Pictures to add to paper:
+% spectrogram of single note
+% spectrogram of multiple notes
+
+% Show FFT vs. Constant q or log bins
+
+% Show SVM output
+% Show SVM with HMM output
+
+% Show NMF output and NMF output with sparsity constraint
+% Show NMF with Itakura-Saito Divergence
+
+
+
+
+
 %\input{abstract.tex}
 
 \begin{abstract}
@@ -57,6 +73,7 @@ Transcription \sep sparse coding \sep non-negative matrix factorization \sep Bay
 
 \section{Introduction}
 
+
 \subsection{Terminology}
 Semitones are the smallest music interval in Western music. On a piano, semitones are the adjacent keys.
 
@@ -64,7 +81,7 @@ Timbre represents the spectral envelope, time envelope, noise, tonality, and ons
 
 Pitches are represented by the notes used in musical notation. Pitches are a psychological perception and not an objective physical property. While we can intuitively assign a linear order to pitches (by referring to pitches as lower or higher than other pitches), pitches are rarely a single frequency and are instead a function of their timbre. 
 
-Polyphony means multiple simultaneous notes. Monophony means only a single note at a time. These terms carry slightly different meanings outside of the automated transcription field. 
+Polyphony means multiple simultaneous notes. Monophony means only a single note at a time. These terms carry slightly different meanings outside of automated transcription research.
 
 \section{Motivation}
 % No more than one page
